Add GitHub Pages workflow, image check script, and docs

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build",
+  "check-image": "node scripts/check-image-size.js",
+  "prepush": "npm run check-image || true",
+  "lint": "eslint .",
+  "preview": "vite preview"
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
